deployments/dev/go-twirp-starter-kit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-twirp-starter-kit
spec:
  ports:
    - protocol: TCP
      targetPort: 8080
      port: 80
  selector:
    app: go-twirp-starter-kit
