deployments/dev/go-twirp-starter-kit-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-go-twirp-starter-kit
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: api.pepeunlimited.com
      http:
        paths:
          - backend:
              serviceName: go-twirp-starter-kit
              servicePort: 80
            path: /twirp/pepeunlimited.twirpkit.services.TodoService/*
